--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ function preload_images() {
     img.src="_static/plusBox.png";
     img.src="_static/minBox.png";
     img.src="_static/plusBoxHighlight.png";
-    img.src="_static/plusBoxHighlight.png";
+    img.src="_static/minBoxHighlight.png";
     img.src="_static/noneBox.png";
 }
 preload_images();
@@ -177,7 +177,7 @@ preload_images();
 $(function () {
     $('.toctree-l2')
         .click(function(event){
-            if (this == event.target) {
+            if (event.target.tagName.toLowerCase() != "a") {
                 if ($(this).children('ul').length > 0) {
                     $(this).css('list-style-image',
                     (!$(this).children('ul').is(':hidden')) ? 'url(_static/plusBox.png)' : 'url(_static/minBox.png)');
