--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <div class="sphinxsidebar">
 	<div class="sphinxsidebarwrapper">
-      <div class="sprint-wrapper"><a href="https://github.com/scikit-learn/administrative/blob/master/sprint_paris_2013/proposal.rst">
+      <div class="sprint-wrapper"><a href="https://github.com/scikit-learn/administrative/blob/master/sprint_paris_2013/proposal.rst#13funding-contact-information">
        <p>The <strong> scikit-learn international code sprint</strong>
 	  is around the corner! <strong>Please, sponsor us</strong>
        </p>
