--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="row-fluid">
                 <div class="offset2 span8"><div id="index_carousel_tn" class="thumbnail">
 		  <a href="auto_examples/index.html">
-		    <div id="examples_carousel" class="carousel slide">
+		    <div id="examples_carousel" class="carousel slide" data-interval="false">
 		      <ol class="carousel-indicators">
 			<li data-target="#examples_carousel" data-slide-to="0" class="active"></li>
 			<li data-target="#examples_carousel" data-slide-to="1"></li>
@@ -116,6 +116,10 @@
 			<div class="item"><img src="_static/banner_example2.png" alt></div>
 			<div class="item"><img src="_static/banner_example3.png" alt></div>
 			<div class="item"><img src="_static/banner_example4.png" alt></div>
+			<div class="item"><img src="_static/banner_example5.png" alt></div>
+			<div class="item"><img src="_static/banner_example6.png" alt></div>
+			<div class="item"><img src="_static/banner_example7.png" alt></div>
+			<div class="item"><img src="_static/banner_example8.png" alt></div>
 		      </div>
 		      <!-- Carousel nav -->
 		      <a class="carousel-control left" href="#examples_carousel" data-slide="prev">&lsaquo;</a>
