--- a/index.html
+++ b/index.html
@@ -100,29 +100,30 @@
 <!-- Banner -->
 <div class="container banner-container">
   <div class="row-fluid banner-inner">
-    <div class="span6">
-      <div class="row-fluid">
-        <div class="offset2 span8"><div id="index_carousel_tn" class="thumbnail">
-	    <div id="examples_carousel" class="carousel slide" data-interval="false">
-	      <ol id="scikit_learn_index_indicators" class="carousel-indicators">
-		<li data-target="#examples_carousel" data-slide-to="0" class="active"></li>
-		<li data-target="#examples_carousel" data-slide-to="1"></li>
-		<li data-target="#examples_carousel" data-slide-to="2"></li>
-		<li data-target="#examples_carousel" data-slide-to="3"></li>
-		<li data-target="#examples_carousel" data-slide-to="4"></li>
-		<li data-target="#examples_carousel" data-slide-to="5"></li>
-		<li data-target="#examples_carousel" data-slide-to="6"></li>
-		<li data-target="#examples_carousel" data-slide-to="7"></li>
-		<li data-target="#examples_carousel" data-slide-to="8"></li>
-		<li data-target="#examples_carousel" data-slide-to="9"></li>
-		<li data-target="#examples_carousel" data-slide-to="10"></li>
-		<li data-target="#examples_carousel" data-slide-to="11"></li>
-		<li data-target="#examples_carousel" data-slide-to="12"></li>
-		<li data-target="#examples_carousel" data-slide-to="13"></li>
-		<li data-target="#examples_carousel" data-slide-to="14"></li>
-		<li data-target="#examples_carousel" data-slide-to="15"></li>
-		<li data-target="#examples_carousel" data-slide-to="16"></li>
-	      </ol>
+    <div class="hidden-sm">
+      <div class="span6">
+	<div class="row-fluid">
+          <div class="offset2 span8"><div id="index_carousel_tn" class="thumbnail">
+	      <div id="examples_carousel" class="carousel slide" data-interval="false">
+		<ol id="scikit_learn_index_indicators" class="carousel-indicators">
+		  <li data-target="#examples_carousel" data-slide-to="0" class="active"></li>
+		  <li data-target="#examples_carousel" data-slide-to="1"></li>
+		  <li data-target="#examples_carousel" data-slide-to="2"></li>
+		  <li data-target="#examples_carousel" data-slide-to="3"></li>
+		  <li data-target="#examples_carousel" data-slide-to="4"></li>
+		  <li data-target="#examples_carousel" data-slide-to="5"></li>
+		  <li data-target="#examples_carousel" data-slide-to="6"></li>
+		  <li data-target="#examples_carousel" data-slide-to="7"></li>
+		  <li data-target="#examples_carousel" data-slide-to="8"></li>
+		  <li data-target="#examples_carousel" data-slide-to="9"></li>
+		  <li data-target="#examples_carousel" data-slide-to="10"></li>
+		  <li data-target="#examples_carousel" data-slide-to="11"></li>
+		  <li data-target="#examples_carousel" data-slide-to="12"></li>
+		  <li data-target="#examples_carousel" data-slide-to="13"></li>
+		  <li data-target="#examples_carousel" data-slide-to="14"></li>
+		  <li data-target="#examples_carousel" data-slide-to="15"></li>
+		  <li data-target="#examples_carousel" data-slide-to="16"></li>
+		</ol>
 	      <!-- Carousel items -->
 	      <div class="carousel-inner">
 		<div class="active item">
@@ -196,9 +197,13 @@
 		    <img src="_images/plot_tomography_l1_reconstruction_1.png"></a>
 		</div>
 	      </div>
+	      <!-- Carousel nav -->
+	      <a class="carousel-control left" href="#examples_carousel" data-slide="prev">&lsaquo;</a>
+	      <a class="carousel-control right" href="#examples_carousel" data-slide="next">&rsaquo;</a>
 	    </div>
 	</div></div>
       </div>
+    </div>
     </div>
     <div id="intro_to_sklearn_p" class="span6">
       <h1>scikit-learn</h1>
