--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <!-- Banner -->
 <div class="container banner-container">
   <div class="row-fluid banner-inner">
-    <div class="hidden-sm">
+    <div class="hidden-phone">
       <div class="span6">
 	<div class="row-fluid">
           <div class="offset2 span8"><div id="index_carousel_tn" class="thumbnail">
@@ -124,86 +124,86 @@
 		  <li data-target="#examples_carousel" data-slide-to="15"></li>
 		  <li data-target="#examples_carousel" data-slide-to="16"></li>
 		</ol>
-	      <!-- Carousel items -->
-	      <div class="carousel-inner">
-		<div class="active item">
-		  <a href="auto_examples/plot_classifier_comparison.html">
-		    <div class="crop-wrapper" style="width: 380px; height: 190px; overflow: hidden">
-		      <img src="_images/plot_classifier_comparison_1.png"
-			   style="max-height: 200px; max-width: 629px; width: 629px; height: 186px;"></div></a>
+		<!-- Carousel items -->
+		<div class="carousel-inner">
+		  <div class="active item">
+		    <a href="auto_examples/plot_classifier_comparison.html">
+		      <div class="crop-wrapper" style="width: 380px; height: 190px; overflow: hidden">
+			<img src="_images/plot_classifier_comparison_1.png"
+			     style="max-height: 200px; max-width: 629px; width: 629px; height: 186px;"></div></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/cluster/plot_lena_ward_segmentation.html">
+		      <img src="_images/plot_lena_ward_segmentation_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/covariance/plot_outlier_detection.html">
+		      <img src="_images/plot_outlier_detection_3.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/applications/plot_species_distribution_modeling.html">
+		      <img src="_images/plot_species_distribution_modeling_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/plot_multilabel.html">
+		      <img src="_images/plot_multilabel_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/decomposition/plot_faces_decomposition.html">
+		      <img src="_images/plot_faces_decomposition_4.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/cluster/plot_kmeans_digits.html">
+		      <img src="_images/plot_kmeans_digits_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/cluster/plot_cluster_comparison.html">
+		      <img src="_images/plot_cluster_comparison_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/ensemble/plot_adaboost_twoclass.html">
+		      <img src="_images/plot_adaboost_twoclass_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/plot_lda_qda.html">
+		      <img src="_images/plot_lda_qda_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/svm/plot_rbf_parameters.html">
+		      <img src="_images/plot_rbf_parameters_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/svm/plot_weighted_samples.html">
+		      <img src="_images/plot_weighted_samples_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/ensemble/plot_gradient_boosting_quantile.html">
+		      <img src="_images/plot_gradient_boosting_quantile_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/manifold/plot_compare_methods.html">
+		      <img src="_images/plot_compare_methods_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/mixture/plot_gmm_pdf.html">
+		      <img src="_images/plot_gmm_pdf_1.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/tree/plot_iris.html">
+		      <img src="_images/plot_iris_11.png"></a>
+		  </div>
+		  <div class="item">
+		    <a href="auto_examples/applications/plot_tomography_l1_reconstruction.html">
+		      <img src="_images/plot_tomography_l1_reconstruction_1.png"></a>
+		  </div>
 		</div>
-		<div class="item">
-		  <a href="auto_examples/cluster/plot_lena_ward_segmentation.html">
-		    <img src="_images/plot_lena_ward_segmentation_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/covariance/plot_outlier_detection.html">
-		    <img src="_images/plot_outlier_detection_3.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/applications/plot_species_distribution_modeling.html">
-		    <img src="_images/plot_species_distribution_modeling_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/plot_multilabel.html">
-		    <img src="_images/plot_multilabel_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/decomposition/plot_faces_decomposition.html">
-		    <img src="_images/plot_faces_decomposition_4.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/cluster/plot_kmeans_digits.html">
-		    <img src="_images/plot_kmeans_digits_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/cluster/plot_cluster_comparison.html">
-		    <img src="_images/plot_cluster_comparison_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/ensemble/plot_adaboost_twoclass.html">
-		    <img src="_images/plot_adaboost_twoclass_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/plot_lda_qda.html">
-		    <img src="_images/plot_lda_qda_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/svm/plot_rbf_parameters.html">
-		    <img src="_images/plot_rbf_parameters_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/svm/plot_weighted_samples.html">
-		    <img src="_images/plot_weighted_samples_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/ensemble/plot_gradient_boosting_quantile.html">
-		    <img src="_images/plot_gradient_boosting_quantile_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/manifold/plot_compare_methods.html">
-		    <img src="_images/plot_compare_methods_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/mixture/plot_gmm_pdf.html">
-		    <img src="_images/plot_gmm_pdf_1.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/tree/plot_iris.html">
-		    <img src="_images/plot_iris_11.png"></a>
-		</div>
-		<div class="item">
-		  <a href="auto_examples/applications/plot_tomography_l1_reconstruction.html">
-		    <img src="_images/plot_tomography_l1_reconstruction_1.png"></a>
-		</div>
+		<!-- Carousel nav -->
+		<a class="carousel-control left" href="#examples_carousel" data-slide="prev">&lsaquo;</a>
+		<a class="carousel-control right" href="#examples_carousel" data-slide="next">&rsaquo;</a>
 	      </div>
-	      <!-- Carousel nav -->
-	      <a class="carousel-control left" href="#examples_carousel" data-slide="prev">&lsaquo;</a>
-	      <a class="carousel-control right" href="#examples_carousel" data-slide="next">&rsaquo;</a>
-	    </div>
-	</div></div>
+	  </div></div>
+	</div>
       </div>
-    </div>
     </div>
     <div id="intro_to_sklearn_p" class="span6">
       <h1>scikit-learn</h1>
