hide sidebar nilearn7

--- a/search.html
+++ b/search.html
@@ -43,7 +43,8 @@
     </a>
   </div>
   <div class="banner">
-    <h1>NiLearn: Machine learning for NeuroImaging in Python</h1>
+    <h1>NiLearn:</h1>
+    <h2>Machine learning for Neuro-Imaging in Python</h2>
   </div>
 </div>
 
