hide sidebar nilearn11

--- a/auto_examples/plot_canica_resting_state.html
+++ b/auto_examples/plot_canica_resting_state.html
@@ -53,6 +53,7 @@
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="index.html">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -1690,6 +1691,7 @@ _________________________________________________filter_and_mask - 14.8s, 0.2min
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="index.html">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
