--- a/np-modindex.html
+++ b/np-modindex.html
@@ -56,6 +56,7 @@
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -160,6 +161,7 @@
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
