--- a/AUTHORS.html
+++ b/AUTHORS.html
@@ -53,6 +53,7 @@
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="#" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -140,6 +141,7 @@ garanty the future of the toolkit, if you use it, please cite it.</p>
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="#" id="navbar-about">About</a></li>
  
       </ul>
     </div>
