--- a/auto_examples/index.html
+++ b/auto_examples/index.html
@@ -53,6 +53,7 @@
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="#">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -209,6 +210,7 @@ scikit-learn.</p>
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="#">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
