--- a/auto_examples/plot_simulated_data.html
+++ b/auto_examples/plot_simulated_data.html
@@ -53,6 +53,7 @@
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="index.html">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -296,6 +297,7 @@ SearchLight: training time: 10.90s</pre>
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="index.html">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
