--- a/haxby_searchlight.html
+++ b/haxby_searchlight.html
@@ -53,6 +53,7 @@
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -546,6 +547,7 @@ voxel must be significant.</td></tr>
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
