--- a/modules/classes.html
+++ b/modules/classes.html
@@ -53,6 +53,7 @@
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="../auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="#">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -443,6 +444,7 @@ features</p>
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="../auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="#">Reference</a> |&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
