--- a/supervised_learning.html
+++ b/supervised_learning.html
@@ -53,6 +53,7 @@
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -200,6 +201,7 @@ It may also be useful for diagnostic.</p>
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
