--- a/unsupervised_learning.html
+++ b/unsupervised_learning.html
@@ -53,6 +53,7 @@
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
@@ -182,6 +183,7 @@ clustering and finding meaningful components (e.g. using ICA).</p>
 <li><a href="user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="auto_examples/index.html">Examples</a> |&nbsp;</li>
 <li><a href="modules/classes.html">Reference</a> |&nbsp;</li>
+<li><a href="AUTHORS.html" id="navbar-about">About</a></li>
  
       </ul>
     </div>
