android fix attempt

--- a/search.html
+++ b/search.html
@@ -31,7 +31,9 @@
     jQuery(function() { Search.loadIndex("searchindex.js"); });
   </script>
   
-  <meta name="keywords" content="nilearn, neuroimaging, python, neuroscience, machinelearning">
+<meta content="True" name="HandheldFriendly">
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+<meta name="keywords" content="nilearn, neuroimaging, python, neuroscience, machinelearning">
 
 
   </head>
