PR version bugfree

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ shuffle ($('#banner a.external'));
 </SCRIPT></p>
 </blockquote></div>
 
-  <div class="section group">
+  <div id="index-grid" class="section group">
      <div class="col span_1_of_3">
        <h3><a href="#">
        First Steps</a></h3>
