--- a/auto_examples/index.html
+++ b/auto_examples/index.html
@@ -84,7 +84,7 @@
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="#">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
-<li id="navbar-about"><a href="../AUTHORS.html">About</a>|&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
 <li id="navbar-ecosystem"><a href="http://www.nipy.org/">Nipy ecosystem</a></li>
  
       </ul>
@@ -232,7 +232,7 @@ scikit-learn.</p>
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="#">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
-<li id="navbar-about"><a href="../AUTHORS.html">About</a>|&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
 <li id="navbar-ecosystem"><a href="http://www.nipy.org/">Nipy ecosystem</a></li>
  
       </ul>
