--- a/auto_examples/plot_nifti_advanced.html
+++ b/auto_examples/plot_nifti_advanced.html
@@ -84,7 +84,7 @@
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="index.html">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
-<li id="navbar-about"><a href="../AUTHORS.html">About</a>|&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
 <li id="navbar-ecosystem"><a href="http://www.nipy.org/">Nipy ecosystem</a></li>
  
       </ul>
@@ -226,7 +226,7 @@ Detrended: mean -0.00, std 1.00</pre>
 <li><a href="../user_guide.html">User Guide</a> |&nbsp;</li>
 <li><a href="index.html">Examples</a> |&nbsp;</li>
 <li><a href="../modules/classes.html">Reference</a> |&nbsp;</li>
-<li id="navbar-about"><a href="../AUTHORS.html">About</a>|&nbsp;</li>
+<li><a href="../AUTHORS.html" id="navbar-about">About</a></li>
 <li id="navbar-ecosystem"><a href="http://www.nipy.org/">Nipy ecosystem</a></li>
  
       </ul>
